Navbar links should be functional now

--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -9,26 +9,26 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="{{ url }}{{ site.baseurl }}/">{{ site.title }}</a>
+            <a class="navbar-brand" href="{{ url }}{{ site.baseurl }}">{{ site.title }}</a>
         </div>
 
         <!-- Collect the nav links, forms, and other content for toggling -->
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
             <ul class="nav navbar-nav navbar-right">
                 <li>
-                    <a href="{{ url }}{{ site.baseurl }}/">Home</a>
+                    <a href="{{ site.url }}{{ site.baseurl }}">Home</a>
                 </li>
                 <li>
-                    <a href="{{ url }}{{ site.baseurl }}/about/">About</a>
+                    <a href="{{ site.url }}{{ site.baseurl }}about/">About</a>
                 </li>
                 <li>
-                    <a href="{{ url }}{{ site.baseurl }}/projects/">Projects</a>
+                    <a href="{{ site.url }}{{ site.baseurl }}projects/">Projects</a>
                 </li>
                 <li>
-                    <a href="{{ url }}{{ site.baseurl }}/resume/">Resume</a>
+                    <a href="{{ site.url }}{{ site.baseurl }}resume/">Resume</a>
                 </li>
                 <li>
-                    <a href="{{ url }}{{ site.baseurl }}/contact/">Contact</a>
+                    <a href="{{ site.url }}{{ site.baseurl }}contact/">Contact</a>
                 </li>
             </ul>
         </div>
