--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,3 +1,5 @@
+{% capture root %}{% if page.root %}{{ page.root }}{% else %}{{ post.root }}{% endif %}{%endcapture%}
+
 <!-- Footer -->
 <footer>
     <div class="container">
@@ -5,7 +7,7 @@
             <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
                 <ul class="list-inline text-center">
                     <li>
-                        <a href="{{ "/feed.xml" | prepend: site.baseurl }}">
+                        <a href="{{ root }}/feed.xml">
                             <span class="fa-stack fa-lg">
                                 <i class="fa fa-circle fa-stack-2x"></i>
                                 <i class="fa fa-rss fa-stack-1x fa-inverse"></i>
@@ -34,8 +36,6 @@
         </div>
     </div>
 </footer>
-
-{% capture root %}{% if page.root %}{{ page.root }}{% else %}{{ post.root }}{% endif %}{%endcapture%}
 
 <!-- jQuery -->
 <script src="{{ root }}/js/jquery.min.js"></script>
