--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -1,3 +1,6 @@
+{% capture root %}{% if page.root %}{{ page.root }}{% else %}{{ post.root }}{% endif %}{%endcapture%}
+
+
 <!-- Navigation -->
 <nav class="navbar navbar-default navbar-custom navbar-fixed-top">
     <div class="container-fluid">
@@ -9,26 +12,26 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="{{ url }}{{ site.baseurl }}">{{ site.title }}</a>
+            <a class="navbar-brand" href="{{ root }}{{ site.baseurl }}/">{{ site.title }}</a>
         </div>
 
         <!-- Collect the nav links, forms, and other content for toggling -->
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
             <ul class="nav navbar-nav navbar-right">
                 <li>
-                    <a href="{{ site.url }}{{ site.baseurl }}">Home</a>
+                    <a href="{{ root }}{{ site.baseurl }}/">Home</a>
                 </li>
                 <li>
-                    <a href="{{ site.url }}{{ site.baseurl }}about/">About</a>
+                    <a href="{{ root }}{{ site.baseurl }}/about/">About</a>
                 </li>
                 <li>
-                    <a href="{{ site.url }}{{ site.baseurl }}projects/">Projects</a>
+                    <a href="{{ root }}{{ site.baseurl }}/projects/">Projects</a>
                 </li>
                 <li>
-                    <a href="{{ site.url }}{{ site.baseurl }}resume/">Resume</a>
+                    <a href="{{ root }}{{ site.baseurl }}/resume/">Resume</a>
                 </li>
                 <li>
-                    <a href="{{ site.url }}{{ site.baseurl }}contact/">Contact</a>
+                    <a href="{{ root }}{{ site.baseurl }}/contact/">Contact</a>
                 </li>
             </ul>
         </div>
