--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -12,26 +12,26 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="{{ root }}{{ site.baseurl }}/">{{ site.title }}</a>
+            <a class="navbar-brand" href="{{ root }}/">{{ site.title }}</a>
         </div>
 
         <!-- Collect the nav links, forms, and other content for toggling -->
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
             <ul class="nav navbar-nav navbar-right">
                 <li>
-                    <a href="{{ root }}{{ site.baseurl }}/">Home</a>
+                    <a href="{{ root }}/">Home</a>
                 </li>
                 <li>
-                    <a href="{{ root }}{{ site.baseurl }}/about/">About</a>
+                    <a href="{{ root }}/about/">About</a>
                 </li>
                 <li>
-                    <a href="{{ root }}{{ site.baseurl }}/projects/">Projects</a>
+                    <a href="{{ root }}/projects/">Projects</a>
                 </li>
                 <li>
-                    <a href="{{ root }}{{ site.baseurl }}/resume/">Resume</a>
+                    <a href="{{ root }}/resume/">Resume</a>
                 </li>
                 <li>
-                    <a href="{{ root }}{{ site.baseurl }}/contact/">Contact</a>
+                    <a href="{{ root }}/contact/">Contact</a>
                 </li>
             </ul>
         </div>
