Started projects page

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -31,7 +31,7 @@
                         </a>
                     </li>
                 </ul>
-                <p class="copyright text-muted">{{ site.title }}  &copy; {{ site.time | date: '%Y' }}</p>
+                <p class="copyright text-muted">Copyright &copy; {{ site.time | date: '%Y' }} {{ site.title }} </p>
             </div>
         </div>
     </div>
