--- a/css/style.css
+++ b/css/style.css
@@ -388,6 +388,10 @@ body {
 .project-listing {
   padding: 0 0 20px;
 }
+.project-listing .row{
+	padding-left: 20px;
+	padding-right: 20px; 
+}
 .project-image {
   padding: 2px 2px;
   width: 100%;
@@ -407,4 +411,7 @@ body {
 }
 .text-center {
   text-align: center !important;
+}
+.under-padding{
+	padding: 0 0 10px;
 }
