Added archive page to navbar

--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -22,6 +22,9 @@
                     <a href="{{ root }}/">Home</a>
                 </li>
                 <li>
+                    <a href="{{ root }}/archive/">Archive</a>
+                </li>
+                <li>
                     <a href="{{ root }}/about/">About</a>
                 </li>
                 <li>
